src/objects/Lead_History__c.object
<CustomObject>
    <description>This object allows storage of historical data for leads such as dates when lead status changed etc.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Represents if the status is the current status on lead or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <formula>IF( ISBLANK( End_Date__c ), TODAY() -  Start_Date__c ,  End_Date__c -  Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Months__c</fullName>
        <formula>IF( ISBLANK( End_Date__c ),  FLOOR(((TODAY() - Start_Date__c)*12)/365) , FLOOR(((End_Date__c - Start_Date__c)*12)/365))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead History</relationshipLabel>
        <relationshipName>Lead_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Lead__r.Name__c</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}-{0000}</displayFormat>
        <label>ID#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>